# xl2pg

./: .gitignore  README.md  db.json  map.json  pyproject.toml  xl2pg.py
lib/: dbconfig.py
