[project]
name = ""
version = ""
description = ""
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "openpyxl>=3.0.10",
    "psycopg[binary]>=3.0.15",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
